# Maestro

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVNOTES.md  Maestro Design Thoughts.md  Makefile  README.md  STYLEGUIDE.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: work_package.yml
EvenG2/: README.md  issue-67-notes.md  maestro-g2-architecture.md  sim-vs-hardware-deltas.md
EvenG2/maestro-even-client/: README.md  index.html  package-lock.json  package.json
_dev/: STORY_TEMPLATE.md
alembic/versions/: 0001_initial_maestro_schema.py  0002_memory_embeddings.py  0003_runtime_settings.py  (+9 more)
app/: __init__.py
docs/: 01_main_workflow_sequence.mmd  02_system_components.mmd  03_database_design.mmd  04_memory_service_flow.mmd  AGENT_RUNTIME.md  BACKLOG.md  CODEBASE_CLEANUP.md  GOOGLE_WORKSPACE_SETUP.md  MAESTRO_KNOWLEDGE_BRIEF.md  MAESTRO_ORCHESTRATOR.md  MEMORY_CURATOR.md  MEMORY_DROPBOX.md  MEMORY_SERVICE.md  PHONE_ACCESS.md  POSTGRES.md  Praxis_Email_Agent.md  RUNTIME_WORKTREE.md  SCHEDULER_QUEUE.md  SYSTEM_INTERACTION_REWORK.md  WORK_PACKAGES.md
frontend/: package-lock.json  package.json
tests/: conftest.py  test_agent_runtime.py  test_agents_api.py  test_background_workers.py  test_gmail_trigger.py  test_health.py  test_identity.py  test_llm_client.py  test_llm_memory_pipeline.py  test_maestro_orchestrator.py  test_memory_api.py  test_memory_curator.py  test_memory_embeddings.py  test_memory_retrieval.py  test_memory_service.py  test_persistence.py  test_scheduler_api.py  test_time.py  test_workflow_templates.py
(+87 files in other folders)
